add product to cart (#9)
